feat: tasks from lesson 2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,86 @@
 </head>
 
 <body>
+    <a href="#" class="card-link">Card link</a>
+    <a href="#" class="card-link">Another link</a>
+
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title" data-number="100">Card title</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <p class="card-text" data-number="50">
+                Some quick example text to build on the card title and make up the bulk of the card's
+                content.
+            </p>
+            <a href="#" id="super_link" class="card-link">Card link</a>
+            <a href="#" class="card-link" data-number="50">Another link</a>
+        </div>
+    </div>
+    <script>
+        // 1. Найти по id, используя getElementById, элемент с id равным "super_link" и вывести этот элемент в консоль.
+
+        const linkSuper = document.getElementById('super_link');
+        console.log(linkSuper);
+
+        // 2. Внутри всех элементов на странице, которые имеют класс "card-link", поменяйте текст внутри элемента на "ссылка".
+
+        const linkCards = document.querySelectorAll('.card-link');
+        linkCards.forEach(element => element.textContent = 'Ссылка');
+
+        // 3. Найти все элементы на странице с классом "card-link", которые лежат в элементе с классом "card-body" и вывести полученную коллекцию в консоль.
+
+
+        // const linksInCardBody = document.querySelectorAll('.card-body .card-link');
+
+        const divCardBody = document.querySelector('.card-body');
+        const linksInCardBody = divCardBody.querySelectorAll('.card-link');
+        console.log(linksInCardBody);
+
+        // 4. Найти первый попавшийся элемент на странице у которого есть атрибут data-number со значением 50 и вывести его в консоль.
+
+        const firstDataNumberElement = document.querySelector('[data-number="50"]');
+        console.log(firstDataNumberElement);
+
+        // 5. Выведите содержимое тега title в консоль.
+
+        // const title = document.querySelector('title');
+        // console.log(title.textContent);
+
+        const title = document.getElementsByTagName('title');
+        console.log(title[0].textContent);
+
+        // 6. Получите элемент с классом "card-title" и выведите его родительский узел в консоль.
+
+        const headingElement = document.querySelector('.card-title');
+        const parent = headingElement.parentNode;
+        console.log(parent);
+
+
+        // 7. Создайте тег p, запишите внутри него текст "Привет" и добавьте созданный тег в начало элемента, который имеет класс "card".
+
+        const paragraph = document.createElement('p');
+        paragraph.textContent = 'Привет';
+
+        // 1 вариант
+        const divCard = document.querySelector('.card');
+        divCard.insertBefore(paragraph, divCard.firstChild);
+
+        // 2 вариант
+        const heading5 = document.querySelector('.card-title');
+        const divParent = heading5.parentNode;
+        divParent.insertBefore(paragraph, heading5);
+
+        // 3 вариант
+        divCard.insertAdjacentHTML('afterbegin', '<div>Привет</div>');
+
+        // 8. Удалите тег h6 на странице.
+
+        const heading6 = document.querySelector('h6');
+        heading6.remove();
+
+    </script>
     <script src="./script/script.js"></script>
+
 </body>
 
 </html>
