feat: smooth scroll added, links for buttons added

--- a/API_1_HW/index.html
+++ b/API_1_HW/index.html
@@ -18,7 +18,7 @@
     <section class="background">
         <header class="header">
             <h1 class="header__logo">BodyLife</h1>
-            <a href="#" class="header__classes-link">Find your class</a>
+            <a href="#classSection" class="header__classes-link">Find your class</a>
         </header>
         <article class="hero">
             <p class="hero__heading"><img src="./assets/Unleash.png" alt="hero-heading" class="hero__heading_img"> our
@@ -27,10 +27,10 @@
                 classes! Our classes are designed
                 to cater to all fitness levels and provide a fun and motivating environment to help you reach your peak
                 performance.</p>
-            <a href="#" class="header__classes-link">Start training</a>
+            <a href="#classSection" class="header__classes-link">Start training</a>
         </article>
     </section>
-    <section class="classes">
+    <section id="classSection" class="classes">
         <h2 class="classes__heading">Class timetable</h2>
         <div class="classes__cards-box">
         </div>
