--- a/JS_advanced+3_HW/show.html
+++ b/JS_advanced+3_HW/show.html
@@ -26,11 +26,13 @@
         </nav>
     </header>
     <main class="main">
-        <section class="show-review">
-
+        <section class="all-reviews">
+            <h2 class="all-reviews__title">Список отзывов</h2>
+            <div class="show-review">
+            </div>
         </section>
     </main>
-    <script src="./script.js"></script>
+    <script src="scriptShow.js"></script>
 </body>
 
 </html>
