feat: arrows work cyclically, adaptive till 320px added

--- a/API_1_HW/index.html
+++ b/API_1_HW/index.html
@@ -35,6 +35,58 @@
         <div class="classes__cards-box">
         </div>
     </section>
+    <section class="about" id="about">
+        <h2 class="about__title">Our instructors</h2>
+        <div class="slider">
+            <div class="slider-arrow-previous">
+                <img src="./assets/icons8-left-arrow-50.png" alt="arrow" class="arrow-previous">
+            </div>
+            <div class="slider__content">
+                <div class="slider-wrapper">
+                    <div class="slider-item_1 slider-item__wrapper">
+                        <img id="slider-1" src="./assets/stretch.jpg" alt="woman" class="about__slider-img">
+                        <p class="slider-item_1_name">Mari March</p>
+                    </div>
+                    <div class="slider-item_2 slider-item__wrapper">
+                        <img id="slider-2" src="./assets/body-man.jpg" alt="man" class="about__slider-img">
+                        <p class="slider-item_1_name">Rudd Manners</p>
+                    </div>
+                    <div class="slider-item_3 slider-item__wrapper">
+                        <img id="slider-3" src="./assets/sculp.jpg" alt="men" class="about__slider-img">
+                        <p class="slider-item_1_name">Grace Oliphant</p>
+                    </div>
+                    <div class="slider-item_4 slider-item__wrapper">
+                        <img id="slider-4" src="./assets/cycle-instructor.jpg" alt="man" class="about__slider-img">
+                        <p class="slider-item_1_name">Enid Hilbourne</p>
+                    </div>
+                    <div class="slider-item_5 slider-item__wrapper">
+                        <img id="slider-5" src="./assets/kick-box.jpg" alt="man" class="about__slider-img">
+                        <p class="slider-item_1_name">Farrel Cartwright</p>
+                    </div>
+                </div>
+                <div class="slider-pagination">
+                    <div id="pagination-1" class="slider-pagination__button-wrapper">
+                        <span class="slider-pagination__button slider-pagination__button_active"></span>
+                    </div>
+                    <div id="pagination-2" class="slider-pagination__button-wrapper">
+                        <span class="slider-pagination__button"></span>
+                    </div>
+                    <div id="pagination-3" class="slider-pagination__button-wrapper">
+                        <span class="slider-pagination__button"></span>
+                    </div>
+                    <div id="pagination-4" class="slider-pagination__button-wrapper">
+                        <span class="slider-pagination__button"></span>
+                    </div>
+                    <div id="pagination-5" class="slider-pagination__button-wrapper">
+                        <span class="slider-pagination__button"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="slider-arrow-next">
+                <img src="./assets/icons8-right-arrow-50.png" alt="arrow" class="arrow-previous">
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
